--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -1,12 +1,9 @@
 .header {
     display: flex;
     justify-content: flex-start;
-    
-    
     align-items: center;
-    
 }
 
 .logo {
-    margin-right: 38px;
+    margin-right: 2.394rem;
 }
