--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,12 @@ $baseFontSize: 16px;
 //indexses
 $z-index-fixed-menu:100;
 
+
+//colors
+$black:#292929;
+$whiteBg:#F5F5F5;
+$gray:#666666;
+
 @import  url('./normolize.css');
 
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
