--- a/css/blocks/btn.scss
+++ b/css/blocks/btn.scss
@@ -2,11 +2,10 @@
     display: inline-block;
     background: #E01F3D;
     color: #ffffff;
-    padding: 15px 41px;
-    border-radius: 100px;
+    padding: 0.945rem 2.583rem;
+    border-radius: 6.3rem;
     font-weight: 700;
     text-decoration: none;
-    
     text-transform: uppercase;
    
 }
