--- a/css/blocks/contacts.scss
+++ b/css/blocks/contacts.scss
@@ -2,8 +2,13 @@
     display: flex;
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.134rem;
+    .contacts__phone{
+        display: flex;
+    }
+    .contacts__image {
+        width: 1.008rem;
+        margin-right: 0.378rem;
+    }
 }
-.contacts__image {
-    margin-right: 6px;
-}
+
