--- a/css/blocks/delivery.scss
+++ b/css/blocks/delivery.scss
@@ -1,24 +1,18 @@
-.delivery__container {
-    display: flex;
-    flex-direction: column;
-    padding: 68px 81px;
-    justify-content: center;
-    height: 100%;
-    background-size: 93%;
-   
-}
 .delivery {
-   
     background: url(../img/bg.png)  bottom no-repeat, #161616;
     background-size: 80%;
+    color:#FFFFFF;
+    .container{
+        display: flex;
+        flex-direction: column;
+        padding: 4.284rem 5.103rem;
+        justify-content: center;
+        height: 100%;
+        background-size: 93%;
+    }
 }
 .main__title--delivery {
-    
-    margin-bottom: 61px;
+    margin-bottom: 3.843rem;
     text-align: center;
     color: #FFFFFF;
-}
-.delivery {
- 
-color:#FFFFFF;
 }
