--- a/css/blocks/fixed-menu.scss
+++ b/css/blocks/fixed-menu.scss
@@ -5,11 +5,11 @@
     z-index: $z-index-fixed-menu;
 }
 .fixed-menu__item{
-    margin-bottom:5px;
+    margin-bottom:0.315rem;
     &--active{
     .fixed-menu__link{
         opacity: 1;
-        border:1px solid #E01F3D;
+        border:0.063rem solid #E01F3D;
          &:before{
              opacity: 1;
              background: #E01F3D;
@@ -19,10 +19,10 @@
 }
 }
 .fixed-menu__link{
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
     border-radius: 50%;
-    border: 1px solid transparent;
+    border: 0.063rem solid transparent;
     display: block;
     position: relative;
     opacity: 0.6;
@@ -31,8 +31,8 @@
         opacity: 0.6;
         background: #292929;
         display: block;
-        width: 6px;
-        height: 6px;
+        width: 0.378rem;
+        height: 0.378rem;
         border-radius: 50%;
         position: absolute;
         top:50%;
