--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -1,49 +1,46 @@
 
-.hero__container {
+.hero {
+    .container{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     height: 100%;
-    padding: 24px 0 50px 0;
+    padding: 1.512rem 0 3.15rem 0;
+    .hero__content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+        flex-grow: 1;
+    }
+    }
 }
 .hero__title {
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 52px;
-    text-transform: uppercase;
-    color: #292929;
     width: 35%;
-    margin-bottom: 22px;
+    margin-bottom: 1.386rem;
 } 
 
 .hero__subtitle {
-    font-family: 'Alegreya Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 21px;
-    line-height: 25px;
-    margin-bottom: 36px;
+    
+    margin-bottom: 2.268rem;
     width: 35%;
 }
 
 .hero__text-section {
-    width: 100%;
-    margin-bottom: 72px;
-}
-.hero__content {
     position: relative;
-    
+    width: 100%;
+    margin-bottom: 4.536rem;
 }
+
 .hero__image {
     position: absolute;
-    width: 498px;
-    height: 498px;
+    width: 31.374rem;
+    height: 31.374rem;
     
-    background: url(../img/headphones.png) center top 1px no-repeat, #FFFFFF;
+    background: url(../img/headphones.png) center top 0.063rem no-repeat, #FFFFFF;
     
     background-size: 97%;
     border-radius: 50%;
     z-index: -100;
-    right: 10px;
-    top: -50px;
+    right: -1.37rem;
+    top: -4rem;
 }
