Переписал всё, относительные еденицы и спрайты

--- a/css/components/btn.scss
+++ b/css/components/btn.scss
@@ -2,8 +2,8 @@
     display: inline-block;
     background: #E01F3D;
     color: #ffffff;
-    padding: 0.945rem 2.583rem;
-    border-radius: 6.3rem;
+    padding: 16px 41px;
+    border-radius: 100px;
     font-weight: 700;
     text-decoration: none;
     text-transform: uppercase;
