--- a/css/components/delivery.scss
+++ b/css/components/delivery.scss
@@ -1,18 +1,23 @@
 .delivery {
-    background: url(../img/bg.png)  bottom no-repeat, #161616;
+    background: url(.././img/bg.png)  bottom no-repeat, #161616;
     background-size: 80%;
     color:#FFFFFF;
     .container{
         display: flex;
         flex-direction: column;
-        padding: 4.284rem 5.103rem;
         justify-content: center;
         height: 100%;
         background-size: 93%;
+        @include phones{
+            padding: 0;
+        }
     }
 }
 .main__title--delivery {
     margin-bottom: 3.843rem;
     text-align: center;
     color: #FFFFFF;
+    @include tablets{
+        margin-bottom: rem(32px);
+    }
 }
