--- a/css/components/reviews.scss
+++ b/css/components/reviews.scss
@@ -14,15 +14,24 @@
 .main__title--reviews {
     position: relative;
     margin-bottom: 1.89rem;
+    @include phones{
+       
+        font-size: rem(32px);
+        line-height: rem(36px);
+    }
 }
 
 .review {
-    
     background: #F8FAF9;
     display: flex;
     width: 100%;
     justify-content: space-between;
     margin-bottom: 1.26rem;
+    @include tablets{
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
     
 }
 
@@ -31,13 +40,34 @@
     padding: 4.725rem 6.615rem 1.575rem 0rem;
     display: flex;
     flex-direction: column;
+    @include tablets{
+        padding: 0;
+    }
 }
 
 .avatar {
+    font-family: 'Play';
+    font-style: normal;
+    font-weight: 700;
+    font-size: rem(24px);
+    line-height: rem(28px);
     flex: 1;
     padding: 2.646rem 2.52rem 2.646rem 2.646rem;
     width: 100%;
     height: 100%;
+    @include tablets{
+        padding: rem(56px) 0rem rem(50px) 0rem;
+        display: flex;
+        justify-content: center;
+        .avatar__img{
+            width: 19%;
+        }
+    }
+    @include tablets{
+        .avatar__img{
+            width: 30%;
+        }
+    }
 }
 
 .review__title {
@@ -45,18 +75,35 @@
     font-size: 1.512rem;
     line-height: 1.764rem;
     margin-bottom: 1.89rem;
+    @include tablets{
+        margin-bottom: 0;
+    }
+    
 }
 
 .review__content-text {
+    max-width: 100%;
     color: $gray;
     margin-bottom: 2.394rem;
+    @include tablets{
+        padding: rem(16px) rem(24px);
+        margin-bottom: 0;
+    }
 }
 
 
 .review__username {
     font-weight: 700;
     font-size: 1.134rem;
-    line-height: 1.323rem
+    line-height: 1.323rem;
+    @include tablets{
+        margin-bottom: rem(30px);
+        font-family: 'Play';
+        font-style: normal;
+        font-weight: 400;
+        font-size: rem(18px);
+        line-height: rem(24px);
+    }
 }
 .reviews__pager-list {
     display: flex;
@@ -74,6 +121,10 @@
     width: 4.662rem;
     border-radius: 50%;
     overflow: hidden;
+    @include phones{
+        height: rem(64px);
+        width: rem(64px);
+    }
     
 }
 .review__pager-item--active {
