--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,10 @@
 $containerWidth: 940px;
 $baseFontSize: 16px;
 
+//breakpoints
+$tablets: 768px;
+$phones: 480px;
+
 //indexses
 $z-index-fixed-menu:100;
 
@@ -9,23 +13,28 @@ $z-index-fixed-menu:100;
 $black:#292929;
 $whiteBg:#F5F5F5;
 $gray:#666666;
-
+@import "media";
 @import  url('./normolize.css');
 
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
 
 @import "layout";
-@import "blocks/hero";
-@import "blocks/header";
-@import "blocks/menu";
-@import "blocks/pros";
-@import "blocks/btn";
-@import "blocks/contacts";
-@import "blocks/why";
-@import "blocks/benifits";
-@import "blocks/reviews";
-@import "blocks/delivery";
-@import "blocks/form";
-@import "blocks/section";
-@import "blocks/fixed-menu";
+@import "components/hero.scss";
+@import "components/header";
+@import "components/menu";
+@import "components/pros";
+@import "components/btn";
+@import "components/contacts";
+@import "components/why";
+@import "components/benifits";
+@import "components/reviews";
+@import "components/delivery";
+@import "components/form";
+@import "components/section";
+@import "components/fixed-menu";
+@import "components/hamburger";
+@import "components/footer";
+@import "components/socials";
+@import "components/info";
+@import "components/map";
